force-app/main/default/objects/Contact/fields/Activity_with_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Activity_with_Competitors__c</fullName>
    <label>Activity with Competitors</label>
    <type>TextArea</type>
</CustomField>