force-app/main/default/objects/Contact/fields/Contact_ID_18_Digit__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_18_Digit__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact ID 18 Digit</label>
    <type>Text</type>
</CustomField>