force-app/main/default/objects/Contact/fields/Contact_Member_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Member_Auto_Number__c</fullName>
    <displayFormat>GCM-{00000000}</displayFormat>
    <label>Contact Member Auto Number</label>
    <type>AutoNumber</type>
</CustomField>