force-app/main/default/objects/Contact/fields/Course_Interest__c.field-meta.xml
<CustomField>
    <fullName>Course_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Values should be from active Campaigns list</description>
    <label>Course Interest</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select active campaign.</errorMessage>
        <filterItems>
            <field>Campaign.Status</field>
            <operation>equals</operation>
            <value>Active, Completed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>