force-app/main/default/objects/Contact/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>Purchaser</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>Dental Assistant</fullName>
            </value>
            <value>
                <fullName>Dental Hygienist</fullName>
            </value>
            <value>
                <fullName>Oral Health Therapist</fullName>
            </value>
            <value>
                <fullName>Practice Manager</fullName>
            </value>
            <value>
                <fullName>Receptionist</fullName>
            </value>
            <value>
                <fullName>Others (Please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>