force-app/main/default/objects/Contact/fields/GC_Membership_ID__c.field-meta.xml
<CustomField>
    <fullName>GC_Membership_ID__c</fullName>
    <formula>IF(
is_GC_Member__c ,
Contact_Member_Auto_Number__c,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GC Membership ID</label>
    <type>Text</type>
</CustomField>