force-app/main/default/objects/Contact/fields/GC_Membership_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>GC_Membership_Start_Date__c</fullName>
    <label>GC Membership Start Date</label>
    <type>Date</type>
</CustomField>