force-app/main/default/objects/Contact/fields/GC_Membership_Validity__c.field-meta.xml
<CustomField>
    <fullName>GC_Membership_Validity__c</fullName>
    <label>GC Membership Validity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 year</fullName>
            </value>
            <value>
                <fullName>2 years</fullName>
            </value>
            <value>
                <fullName>5 years</fullName>
            </value>
            <value>
                <fullName>10 years</fullName>
            </value>
            <value>
                <fullName>Lifetime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>