force-app/main/default/objects/Contact/fields/Honorarium__c.field-meta.xml
<CustomField>
    <fullName>Honorarium__c</fullName>
    <label>Honorarium</label>
    <type>TextArea</type>
</CustomField>