force-app/main/default/objects/Contact/fields/is_GC_Member__c.field-meta.xml
<CustomField>
    <fullName>is_GC_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is GC Member</label>
    <type>Checkbox</type>
</CustomField>