force-app/main/default/objects/Contact/fields/is_Trainer__c.field-meta.xml
<CustomField>
    <fullName>is_Trainer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Trainer</label>
    <type>Checkbox</type>
</CustomField>