force-app/main/default/objects/Contact/fields/Key_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To select the key contact person (user) related to this contact.</description>
    <inlineHelpText>Salesforce User Account</inlineHelpText>
    <label>Key Contact Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>