force-app/main/default/objects/Contact/fields/KOL_Expertise_General__c.field-meta.xml
<CustomField>
    <fullName>KOL_Expertise_General__c</fullName>
    <label>KOL Expertise General</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Influencing</fullName>
            </value>
            <value>
                <fullName>Lecturing (Presentation skills) – International</fullName>
            </value>
            <value>
                <fullName>Good clinical pictures</fullName>
            </value>
            <value>
                <fullName>Field Test participant</fullName>
            </value>
            <value>
                <fullName>Workshops (Hands on ability)</fullName>
            </value>
            <value>
                <fullName>Testimonials</fullName>
            </value>
            <value>
                <fullName>Live Patient Demo</fullName>
            </value>
            <value>
                <fullName>Ability to write articles</fullName>
            </value>
            <value>
                <fullName>Clinical Case Report</fullName>
            </value>
            <value>
                <fullName>Lecturing (Presentation skills)</fullName>
            </value>
            <value>
                <fullName>Local Clinical research</fullName>
            </value>
            <value>
                <fullName>Peer reviewed publications</fullName>
            </value>
            <value>
                <fullName>Lab research</fullName>
            </value>
            <value>
                <fullName>Involving governmental policies</fullName>
            </value>
            <value>
                <fullName>T2T participant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>