force-app/main/default/objects/Contact/fields/KOL_is_part_of_society__c.field-meta.xml
<CustomField>
    <fullName>KOL_is_part_of_society__c</fullName>
    <description>Fill in the KOL&apos;s society involvement.</description>
    <label>KOL is part of society</label>
    <type>TextArea</type>
</CustomField>