force-app/main/default/objects/Contact/fields/KOL_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>KOL_Sub_Type__c</fullName>
    <label>KOL Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KOL</fullName>
            </value>
            <value>
                <fullName>OL</fullName>
            </value>
            <value>
                <fullName>In-house</fullName>
            </value>
            <value>
                <fullName>Influencing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>