force-app/main/default/objects/Contact/fields/KOL_Who_can_Contact__c.field-meta.xml
<CustomField>
    <fullName>KOL_Who_can_Contact__c</fullName>
    <label>KOL Who can Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GCAD &amp; Local</fullName>
            </value>
            <value>
                <fullName>Local to contact Only</fullName>
            </value>
            <value>
                <fullName>GCAD HQ &amp; Local</fullName>
            </value>
            <value>
                <fullName>Professional Service Local</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>