force-app/main/default/objects/Contact/fields/Mailing_Blk_No__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Blk_No__c</fullName>
    <label>Mailing Blk No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>