force-app/main/default/objects/Contact/fields/Mailing_District__c.field-meta.xml
<CustomField>
    <fullName>Mailing_District__c</fullName>
    <label>Mailing District</label>
    <length>100</length>
    <type>Text</type>
</CustomField>