force-app/main/default/objects/Contact/fields/Other_Designation__c.field-meta.xml
<CustomField>
    <fullName>Other_Designation__c</fullName>
    <label>Other Designation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>