force-app/main/default/objects/Contact/fields/Other_Languages__c.field-meta.xml
<CustomField>
    <fullName>Other_Languages__c</fullName>
    <label>Other Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>Bahasa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>