force-app/main/default/objects/Contact/fields/Other_Phone_Information__c.field-meta.xml
<CustomField>
    <fullName>Other_Phone_Information__c</fullName>
    <description>Other Phone Information such as Mobile or Landline</description>
    <label>Other Phone Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landline</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>