force-app/main/default/objects/Contact/fields/Preferred_Communication_Channel__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Communication_Channel__c</fullName>
    <label>Preferred Communication Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face2Face</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Online Tool</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>