force-app/main/default/objects/Contact/fields/Present_Online__c.field-meta.xml
<CustomField>
    <fullName>Present_Online__c</fullName>
    <label>Present Online</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Youtube</fullName>
            </value>
            <value>
                <fullName>Linkedin</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>