force-app/main/default/objects/Contact/fields/Products_covered__c.field-meta.xml
<CustomField>
    <fullName>Products_covered__c</fullName>
    <inlineHelpText>L4 Product hierarchy</inlineHelpText>
    <label>Products covered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GCA_Product_L4</valueSetName>
    </valueSet>
</CustomField>