force-app/main/default/objects/Contact/fields/Same_as_Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Same_as_Account_Address__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Same as Account Address</label>
    <type>Checkbox</type>
</CustomField>