force-app/main/default/objects/Contact/fields/Trainer_Subject__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Subject__c</fullName>
    <label>Trainer Subject</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lab - Composite</fullName>
            </value>
            <value>
                <fullName>Lab- General</fullName>
            </value>
            <value>
                <fullName>Lab - Implant</fullName>
            </value>
            <value>
                <fullName>Lab - Digital</fullName>
            </value>
            <value>
                <fullName>Lab - Ceramic</fullName>
            </value>
            <value>
                <fullName>Ope - Direct restoration</fullName>
            </value>
            <value>
                <fullName>Ope - Indirect/Digital/CAD CAM</fullName>
            </value>
            <value>
                <fullName>Ope - MI</fullName>
            </value>
            <value>
                <fullName>Ope - Implants</fullName>
            </value>
            <value>
                <fullName>Ope - Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>