force-app/main/default/objects/Contact/validationRules/coverage_mandatory_for_OL.validationRule-meta.xml
<ValidationRule>
    <fullName>coverage_mandatory_for_OL</fullName>
    <active>true</active>
    <description>Coverage only mandatory for OL</description>
    <errorConditionFormula>ISPICKVAL( Type__c , &apos;OL&apos;) &amp;&amp; ISBLANK(Coverage__c)</errorConditionFormula>
    <errorDisplayField>Coverage__c</errorDisplayField>
    <errorMessage>Please fill up contact coverage</errorMessage>
</ValidationRule>