force-app/main/default/objects/Contact/validationRules/date_of_birth_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>date_of_birth_validation</fullName>
    <active>true</active>
    <description>Cannot set future date for birthdate</description>
    <errorConditionFormula>Birthdate &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Birthdate</errorDisplayField>
    <errorMessage>Cannot set future date as Date of Birth.</errorMessage>
</ValidationRule>