force-app/main/default/objects/Contact/validationRules/GC_Member_date_is_mandatory_if_member.validationRule-meta.xml
<ValidationRule>
    <fullName>GC_Member_date_is_mandatory_if_member</fullName>
    <active>true</active>
    <errorConditionFormula>is_GC_Member__c &amp;&amp; (ISBLANK( GC_Membership_Start_Date__c) || ISBLANK( GC_Membership_End_Date__c ))</errorConditionFormula>
    <errorDisplayField>GC_Membership_Start_Date__c</errorDisplayField>
    <errorMessage>GC Membership Start Date and End Date are mandatory if the contact is GC Member.</errorMessage>
</ValidationRule>