force-app/main/default/objects/Contact/validationRules/GC_Member_End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>GC_Member_End_Date_Validation</fullName>
    <active>true</active>
    <description>End date cannot before start date</description>
    <errorConditionFormula>GC_Membership_End_Date__c &lt; GC_Membership_Start_Date__c</errorConditionFormula>
    <errorDisplayField>GC_Membership_End_Date__c</errorDisplayField>
    <errorMessage>Membership End Date cannot be before the Start Date.</errorMessage>
</ValidationRule>