force-app/main/default/objects/Contact/validationRules/Mailing_Address_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Mailing_Address_is_Mandatory</fullName>
    <active>true</active>
    <description>To make address field mandatory</description>
    <errorConditionFormula>ISBLANK(MailingStreet) || ISBLANK(MailingCity) || ISBLANK(MailingState) || ISBLANK(MailingPostalCode) || ISBLANK(MailingCountry)</errorConditionFormula>
    <errorMessage>Please fill up all of the Contact Mailing Address details such as Street, City, Country, State/Province, and Postal Code</errorMessage>
</ValidationRule>