force-app/main/default/objects/Contact/validationRules/Other_Phone_Information.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Phone_Information</fullName>
    <active>true</active>
    <description>To input other phone information type when other phone field is filled in.</description>
    <errorConditionFormula>AND(
        NOT(ISBLANK( OtherPhone )),
        ISPICKVAL( Other_Phone_Information__c , &apos;&apos;)
    )</errorConditionFormula>
    <errorMessage>Please select a value in Other Phone Information picklist.</errorMessage>
</ValidationRule>