force-app/main/default/objects/Contact/validationRules/phone_1_format_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>phone_1_format_validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Phone)) &amp;&amp; NOT(REGEX(Phone, &quot;^[0-9]+$&quot;))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone number can only contain digits, no spaces or special characters.</errorMessage>
</ValidationRule>