force-app/main/default/objects/Contact/validationRules/salutation_mandatory_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>salutation_mandatory_validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Salutation))</errorConditionFormula>
    <errorDisplayField>Salutation</errorDisplayField>
    <errorMessage>Salutation is mandatory.</errorMessage>
</ValidationRule>