force-app/main/default/objects/Contact/listViews/All_Contacts_New.listView-meta.xml
<ListView>
    <fullName>All_Contacts_New</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>Specialisation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>