force-app/main/default/objects/Contact/listViews/in_Active_Account_Contacts.listView-meta.xml
<ListView>
    <fullName>in_Active_Account_Contacts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>Specialisation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Contacts</label>
</ListView>