force-app/main/default/objects/Contact/listViews/KOL_List.listView-meta.xml
<ListView>
    <fullName>KOL_List</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>is_Trainer__c</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Coverage__c</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY</columns>
    <columns>Specialisation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>OL</value>
    </filters>
    <label>KOL List</label>
</ListView>